# sdwm

./: .gitignore  README.md  config.def.h  dwm.c
dwm-bar/: CHANGELOG  Cargo.toml  README.md
dwm-bar/src/: main.rs
dwm-bar/src/component/: battery.rs  color.rs  component.rs  cpu.rs  datetime.rs  mod.rs  song.rs  volume.rs  widget.rs
patches/: dwm-tab.diff
src/: Makefile  README.md  autostart.sh  config.def.h  config.mk  drw.c  drw.h  dwm-bar  dwm-volume-ctl  dwm.c
src/scripts/: README.md  chwp  dwm-bar  dwm-bar-refresh  dwm-status-refresh  dwm-volume-ctl  playerctl.sh  power
